--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
     "lucide-react": "^0.486.0",
+    "micro": "^10.0.1",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
